--- a/PhotoHub/templates/signup2.html
+++ b/PhotoHub/templates/signup2.html
@@ -213,7 +213,7 @@
                 <!-- Taking image from user and showing a preview to user before uploading -->
                 <label for="dp">Upload your display picture</label><br>
                 <input type="file" name="dp" onchange="previewFile()"><br><br>
-                <img id="preview" src="" height="200" alt="Image preview...">
+                <img id="preview" src="" height="120" width="100" alt="Image preview...">
 
                 <input type="text" name="role" id="role" value={{role}} hidden>
                 <input type="text" name="id" id="id" value={{id}} hidden>
