--- a/PhotoHub/templates/profile.html
+++ b/PhotoHub/templates/profile.html
@@ -36,111 +36,118 @@
       defer
     ></script>
   </head>
-  <body>
-    <div class="bg-gray-100">
-      <div class="w-full text-white bg-main-color">
-        <div
-          x-data="{ open: false }"
-          class="flex flex-col max-w-screen-xl px-4 mx-auto md:items-center md:justify-between md:flex-row md:px-6 lg:px-8"
-        >
-          <div class="p-4 flex flex-row items-center justify-between">
-            <a
-              href="#"
-              class="flex items-center py-5 px-2 text-gray-700 hover:text-gray-900"
-            >
-              <svg
-                class="h-6 w-6 mr-1 text-blue-400"
-                xmlns="http://www.w3.org/2000/svg"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke="currentColor"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M12 19l9 2-9-18-9 18 9-2zm0 0v-8"
-                />
-              </svg>
-              <span class="font-bold">BiCaption</span>
-            </a>
-            <a href="#" class="py-5 px-3 text-gray-700 hover:text-gray-900"
-              >Features</a
-            >
-            <a href="#" class="py-5 px-3 text-gray-700 hover:text-gray-900"
-              >About</a
-            >
-            <a href="#" class="py-5 px-3 text-gray-700 hover:text-gray-900"
-              >Carrers</a
-            >
-          </div>
-          <nav
-            :class="{'flex': open, 'hidden': !open}"
-            class="flex-col flex-grow pb-4 md:pb-0 hidden md:flex md:justify-end md:flex-row"
-          >
-            <div
-              @click.away="open = false"
-              class="relative"
-              x-data="{ open: false }"
-            >
-              <button
-                @click="open = !open"
-                class="flex flex-row items-center space-x-2 w-full px-3 py-2 mt-2 text-sm font-semibold text-left bg-transparent hover:bg-blue-800 md:w-auto md:inline md:mt-0 md:ml-4 hover:bg-gray-200 focus:bg-blue-800 focus:outline-none focus:shadow-outline"
-              >
-                <span>{{request.user}} </span>
-                <img
-                  class="inline h-6 rounded-full"
-                  src="https://avatars2.githubusercontent.com/u/24622175?s=60&amp;v=4"
-                />
-                <svg
-                  fill="currentColor"
-                  viewBox="0 0 20 20"
-                  :class="{'rotate-180': open, 'rotate-0': !open}"
-                  class="inline w-4 h-4 transition-transform duration-200 transform"
-                >
-                  <path
-                    fill-rule="evenodd"
-                    d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
-                    clip-rule="evenodd"
-                  ></path>
-                </svg>
-              </button>
-              <div
-                x-show="open"
-                x-transition:enter="transition ease-out duration-100"
-                x-transition:enter-start="transform opacity-0 scale-95"
-                x-transition:enter-end="transform opacity-100 scale-100"
-                x-transition:leave="transition ease-in duration-75"
-                x-transition:leave-start="transform opacity-100 scale-100"
-                x-transition:leave-end="transform opacity-0 scale-95"
-                class="absolute right-0 w-full mt-2 origin-top-right rounded-md shadow-lg md:w-48"
-              >
-                <div
-                  class="py-2 bg-white text-blue-800 text-sm rounded-sm border border-main-color shadow-sm"
-                >
-                  <a
-                    class="block px-4 py-2 mt-2 text-sm bg-white md:mt-0 focus:text-gray-900 hover:bg-indigo-100 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
-                    href="#"
-                    >Settings</a
-                  >
-                  <a
-                    class="block px-4 py-2 mt-2 text-sm bg-white md:mt-0 focus:text-gray-900 hover:bg-indigo-100 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
-                    href="#"
-                    >Help</a
-                  >
-                  <div class="border-b"></div>
-                  <a
-                    class="block px-4 py-2 mt-2 text-sm bg-white md:mt-0 focus:text-gray-900 hover:bg-indigo-100 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
-                    href="/logout"
-                    >Logout</a
-                  >
-                </div>
-              </div>
-            </div>
-          </nav>
+
+<body class="bg-gradient-to-r from-pink-100 to-blue-200">
+    <!-- navbar goes here -->
+<nav class="bg-gradient-to-r from-pink-400 via-purple-400 to-blue-500">
+  <div class="max-w-6xl mx-auto px-4">
+    <div class="flex justify-between">
+
+      <div class="flex space-x-4">
+        <!-- logo -->
+        <div>
+          <a href="/" class="flex items-center py-5 px-2 text-gray-700 hover:text-gray-900">
+            <svg class="h-6 w-6 mr-1 text-blue-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 19l9 2-9-18-9 18 9-2zm0 0v-8" />
+            </svg>
+            <span class="font-bold">BiCaption</span>
+          </a>
+        </div>
+
+        <!-- primary nav -->
+        <div class="hidden md:flex items-center space-x-1">
+          <a href="#" class="py-5 px-3 text-gray-700 hover:text-gray-900">Features</a>
+          <a href="#" class="py-5 px-3 text-gray-700 hover:text-gray-900">Pricing</a>
         </div>
       </div>
-      <!-- End of Navbar -->
+
+      <!-- secondary nav -->
+      <div class="hidden md:flex  items-center space-x-1">
+        {% if  request.user.is_authenticated %}
+        <nav
+          :class="{'flex': open, 'hidden': !open}"
+          class="flex-col flex-grow pb-4 md:pb-0 hidden md:flex md:justify-end md:flex-row"
+        >
+          <div
+            @click.away="open = false"
+            class="relative"
+            x-data="{ open: false }"
+          >
+            <button
+              @click="open = !open"
+              class="flex flex-row items-center space-x-2 w-full px-3 py-2 mt-2 text-sm font-semibold text-left bg-transparent  md:w-auto md:inline md:mt-0 md:ml-4 focus:outline-none"
+            >
+              <span style="color: rgb(6, 90, 90); font-size: medium;"><span style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; color: rgb(9, 171, 192);">Hi</span> {{request.user}}</span>
+              <img
+                class="inline ml-3 h-6 rounded-full absolute
+                " style="z-index: 1000;"
+                src="/media/{{ image }}"
+              />
+              <svg
+                fill="currentColor"
+                viewBox="0 0 20 20"
+                :class="{'rotate-180': open, 'rotate-0': !open}"
+                class="inline w-16 h-4 transition-transform duration-200 transform"
+              >
+                <path
+                  fill-rule="evenodd"
+                  d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
+                  clip-rule="evenodd"
+                ></path>
+              </svg>
+            </button>
+            <div
+              x-show="open"
+              x-transition:enter="transition ease-out duration-100"
+              x-transition:enter-start="transform opacity-0 scale-95"
+              x-transition:enter-end="transform opacity-100 scale-100"
+              x-transition:leave="transition ease-in duration-75"
+              x-transition:leave-start="transform opacity-100 scale-100"
+              x-transition:leave-end="transform opacity-0 scale-95"
+              class=" right-0 w-full mt-2 origin-top-right rounded-md shadow-lg md:w-48"
+            >
+              <div
+                class="absolute py-2 px-8 ml-10 bg-white text-blue-800 text-sm rounded-sm border border-main-color shadow-sm"
+              >
+                <a
+                  class="block px-4 py-2 mt-2 text-sm bg-white md:mt-0 focus:text-gray-900 hover:bg-indigo-100 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
+                  href="/profile"
+                  style="color: rgb(51, 51, 51); border-bottom: 0.8px solid rgb(156, 156, 156);"
+                  >Profile</a
+                >
+                <a
+                  class="block px-4 py-2 mt-2 text-sm bg-white md:mt-0 focus:text-gray-900 hover:bg-indigo-100 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
+                  href="/logout"
+                  >Logout</a
+                >
+            </div>
+          </div>
+        </nav>
+        {% else %}
+          <a href="/accounts/login" class="py-5 px-3">Login</a>
+          <a href="/accounts/signup" class="py-5 px-3">Register</a>
+        {% endif %}
+      </div>
+  
+      <!-- mobile button goes here -->
+      <div class="md:hidden flex items-center">
+        <button class="mobile-menu-button">
+          <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+          </svg>
+        </button>
+      </div>
+
+    </div>
+  </div>
+
+  <!-- mobile menu -->
+  <div class="mobile-menu hidden md:hidden">
+    <a href="#" class="block py-2 px-4 text-sm hover:bg-gray-200">Features</a>
+    <a href="#" class="block py-2 px-4 text-sm hover:bg-gray-200">Pricing</a>
+  </div>
+</nav>
+ 
 
       <div class="container mx-auto my-5 p-5">
         <div class="md:flex no-wrap md:-mx-2">
@@ -151,8 +158,8 @@
               <div class="image overflow-hidden">
                 <img
                   class="h-auto w-full mx-auto"
-                  src=""
-                  alt="Rhythm"
+                  src="/media/{{image}}"
+                  alt="DP"
                 />
               </div>
               <h1 class="text-gray-900 font-bold text-xl leading-8 my-1">
@@ -313,7 +320,7 @@
                   {% if role == 'Photographer'%}
                     <div class="grid grid-cols-2">
                       <div class="px-4 py-2 font-semibold">Age</div>
-                      <div class="px-4 py-2">{{Age}}</div>
+                      <div class="px-4 py-2">{{age}}</div>
                     </div>
                   {% endif %}  
                 </div>
@@ -414,5 +421,5 @@
         </div>
       </div>
     </div>
-  </body>
+</body>
 </html>
