--- a/PhotoHub/templates/account/base.html
+++ b/PhotoHub/templates/account/base.html
@@ -4,58 +4,42 @@
     <title>{% block head_title %}{% endblock %}</title>
     {% block extra_head %}
     {% endblock %}
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  
-    <!-- Bootstrap js Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    
+    <link rel="stylesheet" href="https://unpkg.com/tailwindcss/dist/tailwind.min.css" />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-secondary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="/">BiCaption</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+    <nav class="bg-gradient-to-r from-pink-400 via-purple-400 to-blue-500 hover:drop-shadow-xl">
+      <div class="flex mx-auto p-5">
+        <a class="text-gray-800 font-bold text-lg mr-8 hover:text-indigo-500" href="/">BiCaption</a>
+        <button class="" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class=""></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <div class="" id="navbarSupportedContent">
+          <ul class="flex">
             {% if user.is_authenticated %}
-             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="{% url 'account_email' %}">Change E-mail</a>
+             <li class="nav-item mr-6 font-semibold text-lg hover:text-indigo-500">
+              <a class="nav-link active text-white" aria-current="page" href="{% url 'account_email' %}">Change E-mail</a>
              </li>
-             <li class="nav-item">
-              <a class="nav-link" href="{% url 'account_logout' %}">Sign Out</a>
+             <li class="nav-item mr-6 font-semibold text-lg hover:text-indigo-500">
+              <a class="nav-link text-white" href="{% url 'account_logout' %}">Sign Out</a>
              </li>
             {% else %}
-             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="{% url 'account_login' %}">Sign In</a>
+             <li class="nav-item mr-6 font-semibold text-lg hover:text-indigo-500">
+              <a class="nav-link active text-white" aria-current="page" href="{% url 'account_login' %}">Sign In</a>
              </li>
-             <li class="nav-item">
-              <a class="nav-link" href="{% url 'account_signup' %}">Sign Up</a>
+             <li class="nav-item mr-6 font-semibold text-lg hover:text-indigo-500">
+              <a class="nav-link text-white" href="{% url 'account_signup' %}">Sign Up</a>
              </li>
             {% endif %}
           </ul>
-          <form class="d-flex">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-          </form>
+          
         </div>
       </div>
     </nav>
   
-    <!-- <div>
-      <strong>Menu:</strong>
-      <ul>
-        {% if user.is_authenticated %}
-        <li><a href="{% url 'account_email' %}">Change E-mail</a></li>
-        <li><a href="{% url 'account_logout' %}">Sign Out</a></li>
-        {% else %}
-        <li><a href="{% url 'account_login' %}">Sign In</a></li>
-        <li><a href="{% url 'account_signup' %}">Sign Up</a></li>
-        {% endif %}
-      </ul>
-    </div> -->
     {% block content %}
     {% endblock %}
 
