--- a/PhotoHub/templates/allfromCat.html
+++ b/PhotoHub/templates/allfromCat.html
@@ -11,9 +11,9 @@
   <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
 </head>
 
-<body>
+<body class="">
   <!-- navbar goes here -->
-  <nav class="bg-blue-100 py-3">
+  <nav class="bg-gradient-to-r from-gray-400 via-purple-400 to-blue-500  py-4 hove:drop-shadow-lg">
     <div class="max-w-6xl mx-auto px-4">
       <div class="flex justify-between">
 
@@ -26,20 +26,18 @@
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                   d="M12 19l9 2-9-18-9 18 9-2zm0 0v-8" />
               </svg>
-              <span class="font-bold">BiCaption</span>
+              <span class="font-bold text-gray-800">BiCaption</span>
             </a>
           </div>
 
           <!-- primary nav -->
           <div class="hidden md:flex items-center space-x-1">
-            <a href="#" class="py-5 px-3 text-gray-700 hover:text-gray-900">Features</a>
-            <a href="#" class="py-5 px-3 text-gray-700 hover:text-gray-900">Pricing</a>
+            <a href="#" class="py-5 px-3 text-white text-lg tracking-normal hover:tracking-wide hover:drop-shadow-lg">Features</a>
           </div>
         </div>
 
         <!-- secondary nav -->
         <div class="hidden md:flex  items-center space-x-1">
-          {% if request.user.is_authenticated %}
           <nav :class="{'flex': open, 'hidden': !open}"
             class="flex-col flex-grow pb-4 md:pb-0 hidden md:flex md:justify-end md:flex-row">
             <div @click.away="open = false" class="relative" x-data="{ open: false }">
@@ -48,7 +46,7 @@
                 <span style="color: rgb(6, 90, 90); font-size: medium;"><span
                     style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; color: rgb(9, 171, 192);">Hi</span>
                   {{request.user}}</span>
-                <img class="inline ml-3 h-6 rounded-full absolute
+                <img class="inline ml-3 h-6 w-6 rounded-full absolute border border-blue-500 border-3
                 " style="z-index: 1000;" src="/media/{{image}}" />
                 <svg fill="currentColor" viewBox="0 0 20 20" :class="{'rotate-180': open, 'rotate-0': !open}"
                   class="inline w-16 h-4 transition-transform duration-200 transform">
@@ -66,18 +64,14 @@
                 class=" right-0 w-full mt-2 origin-top-right rounded-md shadow-lg md:w-48">
                 <div
                   class="absolute py-2 px-8 ml-10 bg-white text-blue-800 text-sm rounded-sm border border-main-color shadow-sm">
-                  <a class="block px-4 py-2 mt-2 text-sm bg-white md:mt-0 focus:text-gray-900 hover:bg-indigo-100 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
-                    href="/profile"
+                  <a class="tracking-normal hover:tracking-wide hover:drop-shadow-lg block px-4 py-2 mt-2 text-sm bg-white md:mt-0 focus:text-gray-900 hover:bg-indigo-100 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
+                    href="/profile0"
                     style="color: rgb(51, 51, 51); border-bottom: 0.8px solid rgb(156, 156, 156);">Profile</a>
-                  <a class="block px-4 py-2 mt-2 text-sm bg-white md:mt-0 focus:text-gray-900 hover:bg-indigo-100 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
+                  <a class="tracking-normal hover:tracking-wide hover:drop-shadow-lg block px-4 py-2 mt-2 text-sm bg-white md:mt-0 focus:text-gray-900 hover:bg-indigo-100 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
                     href="/logout">Logout</a>
                 </div>
               </div>
           </nav>
-          {% else %}
-          <a href="/accounts/login" class="py-5 px-3">Login</a>
-          <a href="/accounts/signup" class="py-5 px-3">Register</a>
-          {% endif %}
         </div>
 
         <!-- mobile button goes here -->
@@ -96,33 +90,74 @@
     <!-- mobile menu -->
     <div class="mobile-menu hidden md:hidden">
       <a href="#" class="block py-2 px-4 text-sm hover:bg-gray-200">Features</a>
-      <a href="#" class="block py-2 px-4 text-sm hover:bg-gray-200">Pricing</a>
     </div>
   </nav>
+  
 
+  <div style="border: 1px groove; border-radius:10px;" class="mt-5 pb-11 bg-gradient-to-r from-gray-300 to-blue-200 mx-3">
+  <!--Category-->  
+  <div class=" pt-8 pb-3  mt-3">
+    <button id="{{cat}}" style="background-color: rgb(44, 44, 48); text-transform: uppercase;"
+      class="text-white text-2xl ml-9 px-10 py-4 rounded-r-lg"><h1>{{category}}</h1></button>
+  </div>  
+  {% for catph in catphall%}
+  <div class="h-84 flex items-left mt-7 pl-5">
+     {% for ph in catph%}
+      <!--cards-->
+      <div style="border: 1.5px groove; border-radius:15px;" class="flex items-center space-x-4 p-3 mx-3  bg-gradient-to-r from-gray-400 to-blue-500">
+        <div class="flex-shrink-0">
+          <img class="w-48 h-48 rounded-full" src="/media/{{ph.image}}" alt="image">
+        </div>
+        <div class="flex-1 min-w-0">
+          <h1 class="text-2xl text-gray-300 truncate">
+            <strong>{{ph.fname}} {{ph.lname}}</strong>
+          </h1>
 
-  <!--Category-->
-  <div class=" p-5 mt-4">
-    <h1 class=" ml-16 text-2xl font-bold text-red-800">{{category}}</h1>
-  </div>
-
-
-  <div class="h-84 flex ml-4 items-left">
-    {% for ph in  catph%}
-    <!--cards-->
-    <div class="drop-shadow-xl hover:drop-shadow-2xl bg-cyan-400 ml-20 mt-4 text-white  p-3 lg:w-1/4 sm:w-4/4 md:w-2/4 rounded-lg text-center py-8  cursor-pointer">
-      <div class="flex justify-center mb-2"> <img src="/media/{{ph.image}}"
-          class="rounded-full h-48 w-48 flex items-center  justify-center"> </div>
-      <h1 class="text-2xl  text-black mt-5">{{ph.fname}} {{ph.lname}}</h1> <span class="text-1xl  text-black  mt-2">2+ Years
-        Experience</span>
-      <br />
-      <div class="mx-auto">
-        <button style="background-color: rgb(15, 219, 8);" class="bg-red-600 ml-3 mt-3 px-6 py-3 rounded-lg">Book
-          Now</button>
-        <button style="background-color: rgb(32, 248, 230);"
-          class="hover:bg-black-200 ml-1 mt-3 px-6 mr-3 py-3 rounded-lg">Checkout</button>
-      </div>
-    </div>
+          <h3 class="text-xl text-gray-300 mt-1 truncate">
+            {{ph.city}} {{ph.state}}
+          </h3>
+    
+          <p class="text-1xl  text-gray-300  mt-1">Status : {{ph.status}}</p>
+          <p class="text-1xl  text-gray-300  mt-1">Experience 2+ years</p>
+          {% if ph.status == 'Busy' %}
+            <button style="background-color: rgb(245, 23, 16);"
+              class="bg-yellow-300 mt-3 px-3 py-2 rounded-lg cursor-not-allowed">Book Now
+            </button>
+          {% else %}
+            <a href="/appointment/{{ph.photographer_id}}_{{city}}"><button style="background-color: rgb(95, 248, 7);"
+              class="bg-yellow-300 mt-3 px-3 py-2 rounded-lg">Book
+              Now</button>
+            </a>
+          {% endif %}
+          <a href="/blog/{{ph.photographer_id}}_{{city}}"><button
+            class="bg-blue-600 ml-1 mt-3 px-4 py-2 mr-3 rounded-lg">Profile</button>
+          </a>
+        </div>
+      </div> 
     {% endfor %}
- </div>
+  </div>
+  {% endfor %}
+  </div>
+ <center>
+  <div class=" p-5 mt-4">
+    <a href="/category/{{city}}"><button class="px-6 py-2" style="border-radius: 5px; color: white; background-color: rgb(60, 63, 63);">Back</button></a>
+  </div>
+</center>
+
+
+<footer class="bg-gray-800 px-5 sm:px-10 md:px-20 py-5">
+  <div class="flex flex-col items-center lg:flex-row-reverse justify-between">
+    <div class="">
+      <a class="mx-4 text-sm font-bold text-indigo-600 hover:text-indigo-800" href="#">Home</a>
+      <a class="mx-4 text-sm font-bold text-indigo-600 hover:text-indigo-800" href="#">About Us</a>
+      <a class="mx-4 text-sm font-bold text-indigo-600 hover:text-indigo-800" href="#">Careers</a>
+    </div>
+    <div class="mt-4">
+      <img src="" class="w-32">
+    </div>
+    <div class="mt-4 text-xs font-bold text-gray-500">
+      &copy; 2022 BiCaption | MIT License 
+    </div>
+  </div>
+</footer>
 </body>
