--- a/PhotoHub/templates/category.html
+++ b/PhotoHub/templates/category.html
@@ -265,7 +265,7 @@
       </script>
       <!-- js ends -->
       <div class="dropdown px-4 py-6">
-        <button onclick="myFunction()" class="px-16 dropbtn mr-10">Choose Photographer
+        <button onclick="myFunction()" class="px-16 dropbtn mr-10">Choose Photographer Category
         </button>
         <div id="myDropdown" class="mt-2 bg-gradient-to-r from-slate-400 to-blue-600 px-8 py-4 dropdown-content">
           <a href="#Event">Wedding and Events</a>
