Added photographer pics

--- a/PhotoHub/templates/landing.html
+++ b/PhotoHub/templates/landing.html
@@ -681,8 +681,8 @@
           <img src="/media/{{c1.image}}" class="w-32 h-32 border-white border-2 border-white border-2  rounded-full" />
           <div class="text-xs lg:text-md mt-3 text-white pl-3">
             <h1 class="font-bold text-black mt-2">{{c1.fname}} {{c1.lname}}</h1>
-            <p class="mt-2">Lorem ipsum dolor sit amet consectetur
-              adipisicing <br>elit.Temporibus perspiciatis facere <br>nemo qui quas! ea ipsa inventore facere magnam.
+            <p class="mt-2">The site provides amazing photographers at best rates. 
+              <br>It also ensures abuse protection.<br>Overall I had a nice experience.
             </p>
           </div>
         </div>
@@ -691,8 +691,7 @@
           <img src="/media/{{c2.image}}" class="w-32 h-32 border-white border-2  rounded-full" />
           <div class=" pl-3 text-xs lg:text-md text-white mt-3">
             <h1 class="font-bold text-black   mt-2">{{c2.fname}} {{c2.lname}}</h1>
-            <p class="mt-2">Lorem ipsum dolor sit amet consectetur
-              adipisicing <br>elit.Temporibus perspiciatis facere <br>nemo qui quas! ea ipsa inventore facere magnam.
+            <p class="mt-2">Very smooth user experience. <br>Appointment booking is easy.<br>Love this site.
             </p>
           </div>
         </div>
