--- a/PhotoHub/templates/profile.html
+++ b/PhotoHub/templates/profile.html
@@ -415,7 +415,7 @@
                 </div>
                 <ul class="tracking-wider py-3 px-5 font-semibold text-lg list-inside space-y-2">
                   {% for appointment in incoming_appointments %}
-                  {% if forloop.counter < 4 %} <li>
+                    {% if forloop.counter < 4 %} <li>
                     <div style="text-align: center;"
                       class="bg-gradient-to-r from-indigo-300 to-gray-400 pb-3 pt-1  px-4 border border-gray-400 rounded">
                       {% if role == 'Photographer'%}
@@ -514,7 +514,19 @@
                     </div>
                     </li>
                     {% endif %}
-                    {% endfor %}
+                  {% endfor %}
+
+                  {% if length == 0 %}
+                    <div class="mt-28">
+                    <center>
+                      <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-emoji-frown" viewBox="0 0 16 16">
+                        <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+                        <path d="M4.285 12.433a.5.5 0 0 0 .683-.183A3.498 3.498 0 0 1 8 10.5c1.295 0 2.426.703 3.032 1.75a.5.5 0 0 0 .866-.5A4.498 4.498 0 0 0 8 9.5a4.5 4.5 0 0 0-3.898 2.25.5.5 0 0 0 .183.683zM7 6.5C7 7.328 6.552 8 6 8s-1-.672-1-1.5S5.448 5 6 5s1 .672 1 1.5zm4 0c0 .828-.448 1.5-1 1.5s-1-.672-1-1.5S9.448 5 10 5s1 .672 1 1.5z"/>
+                      </svg>
+                      <p style="font-size:1.3rem">No appointments to display currently.</p>
+                    </center>
+                    </div>
+                  {% endif %}
                 </ul>
                 {% if length >= 3 %}
                 <a href="/pagination1_1_0"><button style="width:92%"
